<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".instructions.ui.InstructionsFragment">

    <!--    Here I am using Linear layout because this screen is fairly simple. just 3 views added vertically on top of each other-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/title_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/layout_margin_2x"
            android:layout_marginTop="@dimen/layout_margin_4x"
            android:layout_marginEnd="@dimen/layout_margin_2x"
            android:text="@string/instructions_screen_title" />

        <TextView
            android:id="@+id/body_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/layout_margin_2x"
            android:layout_marginTop="@dimen/layout_margin_4x"
            android:layout_marginEnd="@dimen/layout_margin_2x"
            android:text="@string/instructions_screen_body" />

        <Button
            android:id="@+id/navigationButton"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/layout_margin_2x"
            android:layout_marginTop="@dimen/layout_margin_4x"
            android:layout_marginEnd="@dimen/layout_margin_2x"
            android:fontFamily="@font/roboto"
            android:text="@string/shoe_list" />
    </LinearLayout>
</layout>