<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".login.ui.LoginFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/loginConstraint"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/email_label"
            style="@style/Heading2Style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/layout_margin_2x"
            android:layout_marginTop="@dimen/layout_margin_4x"
            android:layout_marginEnd="@dimen/layout_margin_2x"
            android:text="@string/email_text"
            app:layout_constraintEnd_toStartOf="@+id/barrier"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/password_label"
            style="@style/Heading2Style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/layout_margin_2x"
            android:layout_marginTop="@dimen/layout_margin_4x"
            android:layout_marginEnd="@dimen/layout_margin_2x"
            android:text="@string/password_text"
            app:layout_constraintEnd_toStartOf="@+id/barrier"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/email_label" />

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/barrier"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:barrierDirection="right"
            app:constraint_referenced_ids="email_label,password_label"
            tools:visibility="invisible" />

        <EditText
            android:id="@+id/editTextEmailAddress"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/layout_margin_2x"
            android:layout_marginEnd="@dimen/layout_margin_2x"
            android:ems="10"
            android:hint="@string/email_text"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress"
            app:layout_constraintBaseline_toBaselineOf="@+id/email_label"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/barrier" />

        <EditText
            android:id="@+id/editTextTextPassword"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/layout_margin_2x"
            android:layout_marginEnd="@dimen/layout_margin_2x"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/password_text"
            android:inputType="textPassword"
            app:layout_constraintBaseline_toBaselineOf="@+id/password_label"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/barrier" />

        <Button
            android:id="@+id/buttonLogin"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/layout_margin_2x"
            android:layout_marginTop="@dimen/layout_margin_4x"
            android:layout_marginEnd="@dimen/layout_margin_2x"
            android:fontFamily="@font/roboto"
            android:text="@string/login_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword" />

        <Button
            android:id="@+id/buttonSignup"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/layout_margin_2x"
            android:layout_marginTop="@dimen/layout_margin_2x"
            android:layout_marginEnd="@dimen/layout_margin_2x"
            android:fontFamily="@font/roboto"
            android:text="@string/register_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/buttonLogin" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>